@@ -14,7 +14,7 @@ The plugin provides three pages, which are added to the Statistics menu:
 
 Requires php version 5.2 or later.
 
-Requires the Common Plugin to be installed. 
+Requires the Common Plugin version 2015-03-23 or later to be installed. You should install or upgrade to the latest version.
 
 See <https://github.com/bramley/phplist-plugin-common>
 
@@ -49,6 +49,7 @@ This plugin is free but if you install and find it useful then a donation to sup
 ## Version history ##
 
     version     Description
+    2015-03-23  Change to autoload approach
     2014-07-13  Added bounce date
     2013-08-24  Added to GitHub
     2013-05-10  Initial version for phplist 2.11.9 converted from 2.10 version
