@@ -18,13 +18,9 @@
  * @package   BounceStatisticsPlugin
  */
 
-$commonPlugin = isset($plugins['CommonPlugin']) ? $plugins['CommonPlugin'] : null;
-
-if (!($commonPlugin && $commonPlugin->enabled)) {
+if (!(phplistPlugin::isEnabled('CommonPlugin'))) {
     echo "phplist-plugin-common must be installed and enabled to use this plugin";
     return;
 }
-
-include $commonPlugin->coderoot . 'Autoloader.php';
 
 CommonPlugin_Main::run(new BounceStatisticsPlugin_ControllerFactory);
